--- a/education.tex
+++ b/education.tex
@@ -1,9 +1,6 @@
 \section{Education and Training}
 \label{sec:education}
-
-\mmp{moved stuff in, not organized yet. First is the stuff from planMarina.tex, then from plan.tex}
-
-{\bf About the ACMS program}
+\subsection{\bf About the ACMS program}
 
 The ACMS {\em (Applied and Computational Mathematical Sciences)} was
 introduced in 1998 as a joint undergraduate program between the
@@ -26,38 +23,32 @@ courses (43 credits), the following:
 \\
 {\bf Option Core (37 credits)}
 \bits
-    \item PHYS 121, 122, 123 (5,5,5) (can be replaced by courses in another application area)
-    \item STAT 302: (2) Statistical Software and Its Applications R
-    \item STAT 340: (4) Introduction to Probability and Mathematical Statistics
-    \item STAT 341,342: (4,4) Introduction to Probability and Statistical Inference I,II
-    \item STAT 421: (4) Applied Statistics and Experiment Design
-    \item STAT 423: (4) Applied Regression and Analysis of Variance
+    \item {\sc PHYS 121-2-3} (replaceable by other courses in application areas)
+    \item {\sc STAT 302} Statistical Software and Its Applications (R course, irregularly offered, 2 credits)
+    \item {\sc STAT 340} Intro Probability and Mathematical Statistics
+    \item {\sc STAT 341-2} Intro to Probability and Statistical Inference I,II
+    \item {\sc STAT 421} Applied Statistics and Experiment Design
+    \item {\sc STAT 423} Applied Regression and Analysis of Variance
 \eits
 {\bf Option Electives (10 credits)}
 \bits
-    \item MATH/STAT 396: Probability III
-    \item MATH/STAT 491, 492: Introduction to Stochastic Processes
-\item[]
-    \item STAT 403: (3) Introduction to Resampling Inference
-    \item STAT 427: (3) Introduction to Analysis of Categorical Data
-    \item STAT/BIOST 529: (3) Sample Survey Techniques
-\item[]
-    \item CSE 373 (3) Data Structures
-\item[]
-    \item MATH 300: (3) Mathematical Reasoning
-    \item MATH 327: (3) Introductory Real Analysis I
-    \item MATH 407,408,409: (3,3,3) Linear, Nonlinear,\& Discrete Optimization
-\item[]
-    \item STAT 428: (4) Multivariate Analysis for the Social Sciences
-    \item GEOG 426: (5) Quantitative Methods in Geography
-    \item QMETH 528: (4) Survey Sampling Applications
+    \item {\sc MATH/STAT 396} Probability III
+    \item {\sc MATH/STAT 491-2} Intro Stochastic Processes
+    \item {\sc STAT 403} Intro Resampling Inference
+    \item {\sc STAT 427} Intro Analysis of Categorical Data
+    \item {\sc STAT/BIOST 529} Sample Survey Techniques
+    \item {\sc CSE 373} Data Structures
+    \item {\sc MATH 300} Mathematical Reasoning
+    \item {\sc MATH 327} Intro Real Analysis I
+    \item {\sc MATH 407--8--9} Linear, Nonlinear,\& Discrete Optimization
+    \item {\sc STAT 428} Multivariate Analysis for the Social Sciences
+    \item {\sc GEOG 426} Quantitative Methods in Geography
+    \item {\sc QMETH 528} Survey Sampling Applications
 \eits
 The program web page recommends that ``[this track] is ideally suited as a second major for students with a primary focus in the biological sciences, earth sciences, social sciences, engineering, or management science.''
-
 De facto, the track curricullum differs little, most notably by the
-presence of the computer programming class CSE 142, from the
-``standard'' Statistics major. Another notable difference from the
-statistics major is STAT 390, a class open non-majors from all across UW.
+presence of the computer programming class {\sc CSE 142}, from the
+``standard'' Statistics major.
 
 {\bf Enrollment} The ACMS major is competitive, with the number of
 majors capped at about 200.  During the recent academic years,
@@ -69,7 +60,7 @@ as double majors), and of 2 to 6 students graduated in each of the
 last 5 years. In the same time, enrollment in the Statistics major is
 at an all times high, with \mmp{fill} of which XX women.
 
-\subsection{Transforming the ACMS track}
+\subsection{Transforming the Statistics  ACMS track}
 We will transform the ACMS Statistics track into a virtually new
 major, a ``computationally minded Statistics major''. In other words,
 we will not aim to produce scientists who also know statistics (which
@@ -113,49 +104,51 @@ There are several motivating factors:
 \item This proposal is in the spirit of the ACMS original mission,
   bringing this part up to speed with the demands of the coming decade.
 \eit
-{\bf What we want to do}
 
-\bit
-\item To transform the ACMS Statistics track into a computer intensive statistics major. 
-  \bit
-   \item Stage 1: Design and introduce two new courses \statcl, \astrocl as {\em electives} in the track.
-   \item Stage 2: Redesign the track: move \statcl, Stochastic Processes STAT 481, 482 into the core. As this will no longer be regarded as a second major for science students, we will make room by removing the PHYS 121, 122, 123 courses (15 credits) from it. Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. 
-   \item Stage 3: ?? Making these courses accessible to mathematics majors, via William Steins python programming course. 
-  \eit
-\item To develop a software infrastructure for teaching \cdse~ in
+
+{\bf Stages}\\
+{\em Stage 1:} Design and introduce two new courses \statcl, \astrocl, as {\em electives} in the track. Start the undergraduate research seminar.\\
+{\em Stage 2:} Redesign the track: move \statcl, Stochastic Processes {\sc STAT 481, 482} into the core. As this will no longer be regarded as a second major for science students, we will make room by removing the {\sc PHYS 121-2-3} courses (15 credits) from it. Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. Further reorganization of the core and electives in consultation with Statistics faculty and the other ACMS participating departments and Schools.\\
+{\em Stage 3:} Incorporate feedback from evaluators and all participants. Continue developing the courses' software, data and (for \statcl) lesson modules.
+
+\mmp{here or later?}
+In addition, although we are at the moment not explicitly proposing this, we will investigate if the two new courses could be made accessible to mathematics  majors as well. Prof. William Stein, creator and leader of the {\tt Sage} project, teaches a successful Python programming course in Mathematics, which could serve to build a pathway towards one or both of the two new courses, if a way to satisfy the Statistics prerequisite is also found.
+
+\mmp{move elsewhere}
+To develop a software infrastructure for teaching \cdse~ in
   Python. This will include data sets, data analysis problems,
   software libraries, and course modules built around the data and
   problems. This infrastructure will be made available via the
   web. Due to its modular structure, it will be useable as needed by
   instructors in other courses.
-\item To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
-\item To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
-\eit
+ To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
+ To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
+
 
 
 
 {\bf Why this particular approach} Currently, computer education is
-assured primarily through two core courses, CSE 142, 143
+assured primarily through two core courses, {\sc CSE 142, 143}
 \cite{cse142}. These set the foundations in the understanding of
 computer programming, but they are of a general nature, and are mainly
 focuses towards preparing future programmers. (These courses are the
 same courses that the about 500 CSE majors take). Thus, there is no
 room for data analysis applications in these courses. The need for a
 dedicated scientific computing course was recognized, hence the
-Scientific Computing track and courses developed by AMATH. There is an
-R course (STAT 302, 2 credits) offered as an elective. However, for
-reasons we will develop later, we consider that Python is the more
-appropriate computer language for our goals. Thus, we will both
-introduce Python and will use it to teach statitical methodology. As
-Python will be taught as a second programming language, and as it is
-similar enough to Java, we expect the students to be assimilate it
-quickly under our guidance. 
+Scientific Computing track and courses developed by AMATH. There is
+also an R course ({\sc STAT 302}, 2 credits) offered irregularly.
+However, for reasons we will develop later, we consider that Python is
+the more appropriate computer language for our goals. Thus, we will
+both introduce Python and will use it to teach statitical methodology.
+As Python will be taught as a second programming language, and as it
+is similar enough to Java, we expect the students to be assimilate it
+quickly under our guidance.
+
+
 
 \mmp{ to continue after the proposal more fleshed out}
 
 
-\comment{
-The Program Core is a set of courses totaling 43 credits which are generally required for all ACMS majors. Exceptions are specifically pointed out in the descriptions of the various options. The core courses will provide a solid foundation from which students may pursue any of the approved degree pathways within the Program. }
 
 \mmp{put this somewhere?}
 {\em A fundamental concept at the core of the ACMS program is modeling - casting a real world problem in a way that makes it amenable to mathematical, statistical, or computational analysis. 
@@ -170,7 +163,6 @@ MMP -find out about minors
 
 will also help students in hard/soft sciences 
 
-other activities (training)
 
 \section{University involvement}
 
@@ -214,6 +206,7 @@ already studied from a more theoretical point of view.
 - intro to programming in Python, and to Python libraries supporting scientific computing\\
 - examples real applications from engineering and sciences (image analysis, information retrieval, etc.)
 
+Prerequisites: an introductory programming course (not necessarily in Python) or equivalent programming experience; an introductory statistics course; mathematics multivariate calculus
 
 \item[]{\bf Learning goals for \statcl} Ability to perform computationally intense/authomated and efficient data analysis. Ability to combine existing tools and libraries with programming in a general purpose language (python). 
 Working knowledge of the most important/main machine learning tools and methods, as well as their probabilistic interpretation. Understanding of the practical implications of theoretical results like independence, overfitting, consistency of an estimator. 
@@ -397,16 +390,40 @@ components is technique dependent.}
 \label{sec:precursors}
 
 \meila~ has extensive previous experience teaching computational
-statistics courses at all levels. In particular, she developed the
+statistics courses at all levels. She developed the
 course ``Probability and Statistics for Computer Science'' an
-introductory course aimed at computer science majors, under the same
+introductory course aimed at computer science majors, complete with exercises and demos in Matlab, revised the Statistical Computing graduate course sequence, later developed the Statistical Learning graduate sequence and lead, with E. Fox, the effort to introduce the Machine Learning/Big Data PhD track in the Statistics department. 
+
+
+Some of the more advance
+
+\comment{
+ under the same
 course number \statcl. This has been taught for 11 years at full
 enrollment (50 students). From it, what can be transferred to teaching
 computing and algorithms to young statisticians? The power of hands on
 experience with data, through programs one understands, the
 combination of algorithmics and statistics that comes into play for
-large, high-dimensional data sets \mmp{clean this up}
+large, high-dimensional data sets \mmp{clean this up}}
 
+ZI, AC, JVdP
+
+
+\meila with Connoly co-taught an extremely well received course at CMU
+in 1999-2000, ``Computational Statistics of Multi-Dimensional
+Scientific Databases'', which reunited students from Statistics,
+Computer Science and Astronomy, as well as faculty from these
+departments.
+
+The Statistics department runs a {\em Virtual computer lab} that will
+be used by \statcl~ students in their quiz sessions and assignments.
+The clusters {\tt newton1,2}, consisting of 8, respectively 2 high
+memory nodes, accquired from a UW Student Technology Grant, will serve as
+basis for the graduate student research. \mmp{shall i buy more nodes??}
+
+The \astroml~ book and web site will provide the starting point for the new courses' software and data infrastructure.
+
+\comment{
 (Recently, starting 2011, CSE created their own introduction to
 probability and statistics, {\sc CSE 312}. Thus it is clear that
 \statcl~ can not serve its original purpose and audience.)
@@ -417,27 +434,19 @@ course, having in mind that \bit
 \item the course could now be opened to a larger audience 
 \eit
 I opted to replace the introductory material with more advanced topics, and for these I chose a set of basic machine learning topics. I also introduced more substantial data analysis assignments. These changes were implemented by Hoyt Kopke, who taught the class. The course web page is at {\tt }. The student feedback to this pilot experiment was very encouraging. \mmp{specifics: how many students, what depts, they liked being made to learn python, loved the projects too, level was demanding}
+}
 
-Ivezic, Connolly, and Van der Plaas \ldots \\
-\meila with Connoly co-taught an extremely well received course at CMU
-in 1999-2000, ``Computational Statistics of Multi-Dimensional
-Scientific Databases'', which reunited students from Statistics,
-Computer Science and Astronomy, as well as faculty from these
-departments.
+\mmp{move to university context or remove}
+{\bf Short term: how/where will these classes fit}
+\bits
+\item These courses fit very well with the original goal and mission of the  ACMS program. 
+\item Crosscultural diversity: these classes can also serve science and CSE majors as well as other quantitatively able students across the UW.
+\eits
 
+{\bf Links}\\
+ \statcl Spring 2013 web site {\tt http://www.stat.washington.edu/courses/stat391/spring13/}\\
+\astroml~ textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}\\
 
-
-\subsection{Short term: how/where will these classes fit}
-\mmp{some of this needs revision}
-\bit
-\item These courses fit very well with the original goal and mission of the  ACMS program. The revision we propose will take it to a level corresponding to the current state
-\item Crosscultural diversity: ACMS students will share the class with CS majors (\statcl) or Astronomy and Physics majors
-\item General increased interest from employers in computational statistics, big data, machine learning, together or separately. We expect that ACMS students, too, will be well served by these courses.
-
-\item[]{\bf Links}
-\item \statcl Spring 2013 web site {\tt http://www.stat.washington.edu/courses/stat391/spring13/}
-\item AstroML Textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}
-\eit
 
 
 
