--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
-\section{{\bf  INTRODUCTION}}
+\section{ INTRODUCTION}
 
 This three-year project is an enthusiastic response to the EXTREEMS-QED (Expeditions in Training, Research, 
 and Education for Mathematics and Statistics Through Quantitative Explorations of Data) solicitation for proposals
@@ -11,7 +11,31 @@ at the University of Washington. We have secured broad institutional support and
 (Statistics and Astronomy), and the proposed work includes a workshop centered on professional development activities
 for faculty from other institutions wishing to emulate the proposed program. 
 
-The Education and Training component will be centered around the Applied and Computational Math Sciences (ACMS) 
+\bits
+\item[]{\bf Education and Training} (Section \ref{sec:education} 
+\item Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
+  \bits
+  \item two new courses
+  \item new curriculum 
+  \item mentoring undergraduates
+  \eits
+\item {\bf Research and mentoring for research} \ref{sec:research} 
+  \bits
+  \item \ldots
+  \item facilitate entrance of Statistics students in computationally intensive data analysis research
+  \item mentor Astronomy graduate students 
+  \item mentoring undergraduates by PI's and graduate students
+  \item undergraduate research seminar
+  \eits
+\item {\bf Dissemination and Outreach} \ref{sec:outreach}
+  \bits
+  \item software and datasets infrastructure for teaching computational statistics and machine learning 
+  \item workshop for UW faculty in the use of the infrastructure and our experience with it
+  \item training workshop with outside participation 
+  \eits
+\eits  
+
+This component will be centered around the Applied and Computational Math Sciences (ACMS) 
 Program at the University of Washington. We will significanly enhance this program in the context of computational 
 and data-enabled science and engineering by including two new specialized courses in the ACMS statistics track. 
 The first course, STAT 391 ``Computational Statistical Modeling and Machine Learning'', will include essential statistical 
@@ -36,9 +60,10 @@ institutions wishing to emulate the proposed program. The workshop, and a suppor
 teaching materials (including datasets and code to perform hands-on research exercises) and the results of program 
 effectiveness evaluation. 
 
-In the remainder of this proposal, we describe the new courses in detail, how they fit within the ACMS program and the  
-overall ``Big Data'' efforts within the University of Washington, and the budget and execution schedule for the proposed 
-program.  
+In the remainder of this proposal, we describe each component in
+detail, how they fit within the ACMS program and the overall ``Big
+Data'' efforts within the University of Washington, and the budget and
+execution schedule for the proposed program.
 
 
 
