--- a/proposal.tex
+++ b/proposal.tex
@@ -69,6 +69,9 @@
 \input{activities} % what everyone is doing, recruiting, evaluation
                    % Andy's stuff, some sections from planMarina.tex
 
+\input{recruitment} % what everyone is doing, recruiting, evaluation
+                   % Andy's stuff, some sections from planMarina.tex
+
 \input{uw}         % what we are leveraging (igert,esci), who else is profiting
                    % eg astro, science, cs, maybe math majors
 % results from nsf support  -- not sure where yet
