--- a/activities.tex
+++ b/activities.tex
@@ -1,12 +1,10 @@
 \section{Activities}
-\mmp{tentative title}
 \label{sec:activities}
 
 \subsection{Grad students involvement}
 
 For the statistics graduate students funded by this grant, I envision 
-
-\bit
+\bits
 \item to fund several students for a relatively short time (2 quarters
   to 1 year) We adopt this ``rotation'' plan recognizing that developing tools .
 (This ``rotation'' model will also assure that the ``API'' of our data infrastructure is truly functional, as each departing grad student will have to ensure the smoothe transition to her/his successor.)
@@ -19,40 +17,59 @@ For the statistics graduate students funded by this grant, I envision
 \item The students will also be strongly recommended to TA the STAT 391 class, thus rounding their preparation and self-confidence. 
 \item This will enable stat PhD students to play useful roles in the other NSF funded initiatives at UW. For instance, in the CSNE, with with the PI is involved, where the data collected, far from reaching Tera byte sizes, represents a daunting challenge for the average Statistics graduate student who hasn't accquired a CS degree before. This plan also harmonizes with the IGERT plan of offering graduate students the experience of working with domain scientists, and with outside big data companies via internships. 
 \item Finally, the graduate student will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
- \eit
+ \eits
 
 \subsection{PI Involvement}
 
-\bit
+\bits
 \item First year: program coordination and curriculum planning. Within the department and between the other departments participating in ACMS. Preparation for phase 2 of the project happens now. 
 
 Develops (with the RA and the co-PI's) a plan for the core Python numerical and data structures libraries to be taught/presented. 
 
-Starts developing course notes for STAT 391. 
+Starts developing course notes for \statcl.
 
 \item Second year: Evaluates the success of the first phase and
   incorporates lessons learned. Writes the bulk of the STAT 391 course
-  notes. Supervises the undergraduate research seminar. Major work (with RA) 
-  selecting/curating the data sets to be used in STAT 391.
+  notes. Supervises the undergraduate research seminar. Major work
+  (with RA) selecting/curating the data sets to be used in
+  \statcl. \mmp{will lighten this because the salary was shrunk}
 
 \item Third year: Evaluation of the second phase and fine-tuning of
   the curriculum and program requirements. Explores possibilities to
   open this pathway to math majors.
- \eit
+ \eits
 
 \subsection{Undergraduate involvement}
 
-(sketch)
 The PI and co-PI's have extensive track records of involving
 undergrads in research. 
 
-Ugrads who take either of the courses will be involved in research
-projects either (1) along with the funded graduate students, or (2) in
-the UW units that provide data sets. All undergraduates involved in
-research under this project, along with the graduate students will
-participate in an {\em Undergraduate Research Seminar} where they will
-present and discuss their work. 
+Undergraduates who take either of the courses will be involved in
+research projects either (1) along with the funded graduate students,
+superivsed by the PI, co-PI's and the graduate students or (2) in the
+UW units that provide data sets.
 
-as well as any undergraduate students
-involved in research with Statistics faculty who would like to
-participate, will
+All undergraduates involved in research under this project, along with
+the graduate students, will participate in an {\em Undergraduate
+\cdse  Research Seminar} \comment{(UNDRESS)} where they will present and
+discuss their work.  
+
+The seminar will be open to any other undergraduate students involved
+in research with Statistics faculty who would like to participate, as
+well as any other undergraduates across campus interested in \cdse~
+research. The seminar's goal is to be a forum where research
+experiences are shared, research teams are formed, new research
+projects are started, and familiarity with the strategic and social
+aspects of research is gained. 
+
+In addition to technical presentations/discussion by undergraduates,
+the seminar will include:
+\bits
+\item meetings where faculty (from sciences for example) present quantitative data analysis research projects to recruit interested undergraduates
+\item  mentorship sessions by guest speakers, UW graduate students and faculty, on carreer options in research, applying to graduate school, how to work in a team, how to approach a potential research advisor, how to approach a new research project
+\item presentations from outside speakers (e.g local buinesses Amazon,
+  Microsoft,...) on carrerr opportunties in \cdse
+\eits
+Some of the seminar's activities and goals overlap with the {\em Statistics and Probability Association}'s\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and with the PreMAP program's, and we plan to do these jointly, reinforcing the  benefits for all groups involved.
+
+
