moved some stuff from the intro here

--- a/education.tex
+++ b/education.tex
@@ -448,14 +448,14 @@ I opted to replace the introductory material with more advanced topics, and for 
 \astroml~ textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}\\
 
 
+\comment{OTHER USEFUL INFO
+AMATH 481 Scientific Computing (5)
+Project-oriented computational approach to solving problems arising in the physical/engineering sciences, finance/economics, medical, social, and biological sciences. Problems requiring use of advanced MATLAB routines and toolboxes. Covers graphical techniques for data presentation and communication of scientific results. Prerequisite: AMATH 301; either AMATH 351 or MATH 307; either AMATH 352 or MATH 308. Offered: A. 
 
+AMATH 482
+Exploratory and objective data analysis methods applied to the physical, engineering, and biological sciences. Brief review of statistical methods and their computational implementation for studying time series analysis, spectral analysis, filtering methods, principal component analysis, orthogonal mode decomposition, and image processing and compression. Prerequisite: AMATH 301; either AMATH 352 or MATH 308. Offered: W.
 
+AMATH 483 High-Performance Scientific Computing (5)
+Introduction to hardware, software, and programming for large-scale scientific computing. Overview of multicore, cluster, and supercomputer architectures; procedure and object oriented languages; parallel computing paradigms and languages; graphics and visualization of large data sets; validation and verification; and scientific software development. Prerequisite: either CSE 142 or AMATH 301. Offered: Sp. 
 
-
-
-
-
-
-
-
-
+}
