--- a/organization.tex
+++ b/organization.tex
@@ -59,6 +59,74 @@ Emission from Quasars'' (AST-0807500) used time-domain data for the exploration 
 physics. This three-year project has produced four journal publications, a Ph.D. thesis, and has 
 engaged four undergraduates in data analysis and publications. 
 
+
+\mmp{Zeljko's ``key words'' to scatter in the text moved here from the Introduction}
+{\it 
+1) course/class work 
+
+- we will contribute to education of the next generation of mathematics and statistics 
+   undergraduate students to confront new challenges in computational and data-enabled 
+   science and engineering (\cdse) 
+
+- we will also include math and stat minors 
+
+- our efforts will result in significant changes to the undergraduate curriculum
+
+- student training will incorporate computational tools for analysis of large data sets and
+   for modeling and simulation of complex systems
+
+- we will incorporating \cdse content in existing courses and develop new courses in 
+   \cdse areas
+
+- we will create resources for scientific education, including cyber-enabled pedagogies 
+   (eBooks, online resources, etc.).
+
+- we will foster interdisciplinary collaborations aiming to transform both departmental and 
+   institutional culture.
+
+- we have broad institutional support and department-wide commitment that encourage 
+   collaborations within and across disciplines
+
+
+2) research work
+
+- research work will be broadly defined, long-term, team-based, interdisciplinary, and 
+   will include with other institutions 
+
+- we will development tools and theory for analyzing massive data sets
+
+- we will use cyberinfrastructure to model and visualize complex scientific and engineering 
+   concepts;
+
+- we will create resources for scientific investigation, including state-of-the-art tools and 
+  theory for knowledge discovery from massive, complex, and dynamic data sets
+
+- we will foster interdisciplinary collaborations
+
+- we will promote undergraduate research and hands-on experiences centered on \cdse
+
+- the hands-on research work will developing CI competences (programming, data 
+   management, simulation-building)
+
+- we will leverage and advance the use of cyberinfrastructure resources (e.g. data archives, 
+   networks, advanced computing systems, visualization environmnets) for data exploration
+
+- we will address data-intensive scientific problems (arising in astronomy and ...)
+
+3) workshop
+
+- professional development activities centered on \cdse for faculty or K-12 teachers
+
+- we will foster interdisciplinary collaborations
+
+- we will create new learning environments and experiences that immerse students in \cdse 
+   while energizing and sustaining the professional growth of faculty in \cdse
+}
+
+
+
+
+
 \end{document} 
 
 
