--- a/proposal.tex
+++ b/proposal.tex
@@ -14,6 +14,10 @@
 %Uncomment next line for pdfTeX:
 %\pdftrue \pdfcompresslevel=9
 
+\title{Computer enabled statistics in the {ACMS} {Program} at the
+  {University} of {Washington}}
+\author{PI: Marina \meila, Co-PIs: Andrew Connolly, \u{Z}eljko Ivezic, Jacob Vanderplas}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \font\math = cmmi12
 \newcommand\x         {\hbox{$\times$}}
@@ -60,6 +64,8 @@
 
 \begin{document}
 \vskip -0.4in
+
+\maketitle
 
 \input{introduction}  % the same
    
