education mostly done

--- a/activities.tex
+++ b/activities.tex
@@ -68,7 +68,7 @@ the seminar will include:
 \item meetings where faculty (from sciences for example) present quantitative data analysis research projects to recruit interested undergraduates
 \item  mentorship sessions by guest speakers, UW graduate students and faculty, on carreer options in research, applying to graduate school, how to work in a team, how to approach a potential research advisor, how to approach a new research project
 \item presentations from outside speakers (e.g local buinesses Amazon,
-  Microsoft,...) on carrerr opportunties in \cdse
+  Microsoft,...) on carrerr opportunties in \cdse. We will assure to bring in women and underrepresented minorities role models as often as possible among the internal and external guest speakers.
 \eits
 Some of the seminar's activities and goals overlap with the {\em Statistics and Probability Association}'s\footnote{{\tt http://students.washington.edu/spassc/index.html}}, and with the PreMAP program's, and we plan to do these jointly, reinforcing the  benefits for all groups involved.
 
