--- a/organization.tex
+++ b/organization.tex
@@ -60,6 +60,19 @@ physics. This three-year project has produced four journal publications, a Ph.D.
 engaged four undergraduates in data analysis and publications. 
 
 
+\section{Cemetery}
+
+To develop a software infrastructure for teaching \cdse~ in
+  Python. This will include data sets, data analysis problems,
+  software libraries, and course modules built around the data and
+  problems. This infrastructure will be made available via the
+  web. Due to its modular structure, it will be useable as needed by
+  instructors in other courses.
+ To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
+ To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
+
+
+
 \mmp{Zeljko's ``key words'' to scatter in the text moved here from the Introduction}
 {\it 
 1) course/class work 
