--- a/education.tex
+++ b/education.tex
@@ -4,59 +4,59 @@
 
 The ACMS {\em (Applied and Computational Mathematical Sciences)} was
 introduced in 1998 as a joint undergraduate program between the
-departments of Applied Mathematics, Computer Science and Engineering,
-Mathematics and Statistics, among others.
+departments of Applied Mathematics, Computer Science and Engineering
+(CSE), Mathematics, and Statistics, among others.
 
-The ACMS program is structured into a {\em core}, totaling 43 credits,
-and a set of options, or {\em tracks}. The same set of core courses is
-required for all options (with some exceptions). Options are either
-associated with a particular application domain (Biological and Life
-Sciences, Mathematical Economics, Social and Behavioral Sciences,
-Engineering and Physical Sciences) or with a particular area of
-specialization in the mathematical sciences ({\em Discrete Math and
+The ACMS program is structured into a {\em core} set of courses,
+totaling 43 credits, and a set of options, or {\em tracks}. The tracks
+are either associated with a particular application domain (Biological
+and Life Sciences, Mathematical Economics, Social and Behavioral
+Sciences, Engineering and Physical Sciences) or with a particular area
+of specialization in the mathematical sciences ({\em Discrete Math and
   Algorithms, Operations Research, Scientific Computing and Numerical
-  Analysis, and Statistics}). 
+  Analysis, and \underline{Statistics}}).
 
 It is the Statistics track of ACMS that we are aiming to
 tranform. Currently, this track contains, in addition to the core
-courses (43 credits), the following:
+courses, the following:
 \\
 {\bf Option Core (37 credits)}
 \bits
     \item {\sc PHYS 121-2-3} (replaceable by other courses in application areas)
     \item {\sc STAT 302} Statistical Software and Its Applications (R course, irregularly offered, 2 credits)
-    \item {\sc STAT 340} Intro Probability and Mathematical Statistics
-    \item {\sc STAT 341-2} Intro to Probability and Statistical Inference I,II
+    \item {\sc STAT 340} Probability and Mathematical Statistics
+    \item {\sc STAT 341-2} to Probability and Statistical Inference I,II
     \item {\sc STAT 421} Applied Statistics and Experiment Design
     \item {\sc STAT 423} Applied Regression and Analysis of Variance
 \eits
 {\bf Option Electives (10 credits)}
 \bits
     \item {\sc MATH/STAT 396} Probability III
-    \item {\sc MATH/STAT 491-2} Intro Stochastic Processes
-    \item {\sc STAT 403} Intro Resampling Inference
-    \item {\sc STAT 427} Intro Analysis of Categorical Data
+    \item {\sc MATH/STAT 491-2} Stochastic Processes
+    \item {\sc STAT 403}  Resampling Inference
+    \item {\sc STAT 427}  Analysis of Categorical Data
     \item {\sc STAT/BIOST 529} Sample Survey Techniques
     \item {\sc CSE 373} Data Structures
     \item {\sc MATH 300} Mathematical Reasoning
-    \item {\sc MATH 327} Intro Real Analysis I
+    \item {\sc MATH 327}  Real Analysis I
     \item {\sc MATH 407--8--9} Linear, Nonlinear,\& Discrete Optimization
     \item {\sc STAT 428} Multivariate Analysis for the Social Sciences
     \item {\sc GEOG 426} Quantitative Methods in Geography
     \item {\sc QMETH 528} Survey Sampling Applications
+    \item {\sc STAT 498} Special topics
 \eits
-The program web page recommends that ``[this track] is ideally suited as a second major for students with a primary focus in the biological sciences, earth sciences, social sciences, engineering, or management science.''
+The program web page recommends that ``[this track] is ideally suited as a {\em second major} for students with a primary focus in the [\ldots] sciences''.
 De facto, the track curricullum differs little, most notably by the
 presence of the computer programming class {\sc CSE 142}, from the
 ``standard'' Statistics major.
 
 {\bf Enrollment} The ACMS major is competitive, with the number of
 majors capped at about 200.  During the recent academic years,
-graduation numbers have passed 100 student per year, with the current
-enrollment at 147\footnote{Complete breakdown of ACMS graduation
+graduation numbers have passed 100 student per year; the current
+enrollment is at 147\footnote{Complete breakdown of ACMS graduation
   numbers from 1998 on are in the Supplementary material.}.  Of these,
 the Statistics track accounts for 4 students currently enrolled (none
-as double majors), and of 2 to 6 students graduated in each of the
+as double majors), and for 2 to 6 students graduated in each of the
 last 5 years. In the same time, enrollment in the Statistics major is
 at an all times high, with \mmp{fill} of which XX women.
 
@@ -76,18 +76,18 @@ There are several motivating factors:
   enrollment in the other tracks, the total ACMS enrollment will be
   near the 200 level.
 
-\item \mmp{the next items could be shortened if needed} The role of
+\item The role of
   the statistician as data analyst has become both more central, and
   more demanding. As more data analysis and more decisions based on it
   are being shifted from humans to computers, statistics is called
   upon to design and validate the procedures used to take these
   decisions. Thus, the statician's importance in a much wider range of
   human activities, be they science or buisness. But the
-  statistician's responsability is comensurately growins, as she needs
+  statistician's responsability is comensurately growing, as she needs
   to master the skills required by cyber-enabled science and data
   analysis.
-\item These skills include are not limited to computer using and
-  programming skills. The nature of statistical analyses itself is
+\item These skills include are not limited to using computers and
+  programming. The nature of statistical analyses itself is
   affected \mmp{get some citations} as it has been long
   recognized. Computationally aware statistical methods need to be
   designed. Very large samples will support models of a complexity
@@ -100,31 +100,34 @@ There are several motivating factors:
   almost universal necessity. Devising new methods to evaluate complex
   models in an environment that is not stationary, nor controlled are
   some of the challenges of modern data analysis.
-\item The proposal fits in and leverages other efforts and successes at UW in creating a strong collaborative environment for \cdse~ (the e-science Institute, the IGERT for graduate education in Big Data and related PhD tracks already existing in CSE and Statistics). The time is ripe to involve undergraduates, and specifically statistics and mathematics majors in this change.
+\item The proposal fits in and leverages other efforts and successes at UW in creating a strong collaborative environment for \cdse~ (the e-science Institute, the IGERT for graduate education in Big Data and the related PhD tracks recently created in CSE and Statistics). The time is ripe to involve undergraduates, and specifically statistics and mathematics majors in this change.
 \item This proposal is in the spirit of the ACMS original mission,
   bringing this part up to speed with the demands of the coming decade.
 \eit
+{\bf Plan}
+
+{\em Stage 1:} Design and introduce two new courses \statcl, \astrocl,
+as {\em electives} in the track.  Start the Undergraduate \cdse~
+Research Seminar. This seminar will differ from the existing ``ACMS''
+Undergraduate Math Science Seminar ({\sc Math 498}), in that the
+speakers will be undergraduates themselves or their mentors, and the
+seminar topics will be thei projects (see Section
+\ref{sec:ugrad-seminar} for more details).
+
+{\em Stage 2:} Redesign the track: move \statcl, Stochastic Processes {\sc STAT 481, 482} into the core. As the track will no longer be regarded as a second major for science students, we will make room by removing the {\sc PHYS 121-2-3} courses (15 credits) from it.  Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. Further reorganization of the core and electives in consultation with Statistics faculty and the other ACMS participating departments and Schools. For example, we will consider adding one or both of {\sc AMATH 482, 483} ``Data analysis'', ``High performance scientific computing''.
+
+Workshop for UW faculty sharing our experiences and teaching infrastructure.
+
+{\em Stage 3:} Incorporate feedback from evaluators and all participants. Continue developing the courses' software and data infrastructure. 
 
 
-{\bf Stages}\\
-{\em Stage 1:} Design and introduce two new courses \statcl, \astrocl, as {\em electives} in the track. Start the undergraduate research seminar.\\
-{\em Stage 2:} Redesign the track: move \statcl, Stochastic Processes {\sc STAT 481, 482} into the core. As this will no longer be regarded as a second major for science students, we will make room by removing the {\sc PHYS 121-2-3} courses (15 credits) from it. Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. Further reorganization of the core and electives in consultation with Statistics faculty and the other ACMS participating departments and Schools.\\
-{\em Stage 3:} Incorporate feedback from evaluators and all participants. Continue developing the courses' software, data and (for \statcl) lesson modules.
-
-\mmp{here or later?}
-In addition, although we are at the moment not explicitly proposing this, we will investigate if the two new courses could be made accessible to mathematics  majors as well. Prof. William Stein, creator and leader of the {\tt Sage} project, teaches a successful Python programming course in Mathematics, which could serve to build a pathway towards one or both of the two new courses, if a way to satisfy the Statistics prerequisite is also found.
-
-\mmp{move elsewhere}
-To develop a software infrastructure for teaching \cdse~ in
-  Python. This will include data sets, data analysis problems,
-  software libraries, and course modules built around the data and
-  problems. This infrastructure will be made available via the
-  web. Due to its modular structure, it will be useable as needed by
-  instructors in other courses.
- To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
- To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
-
-
+In addition to this plan, although we are at the moment not explicitly
+proposing this, we will investigate if the two new courses could be
+made accessible to Mathematics majors as well. Mathematics Professor
+William Stein, creator and leader of the {\tt Sage} project, teaches a
+successful Python programming course in Mathematics, which could serve
+to build a pathway towards one or both of the two new courses, if a
+way to satisfy the Statistics prerequisite is also found.
 
 
 {\bf Why this particular approach} Currently, computer education is
@@ -132,28 +135,34 @@ assured primarily through two core courses, {\sc CSE 142, 143}
 \cite{cse142}. These set the foundations in the understanding of
 computer programming, but they are of a general nature, and are mainly
 focuses towards preparing future programmers. (These courses are the
-same courses that the about 500 CSE majors take). Thus, there is no
-room for data analysis applications in these courses. The need for a
-dedicated scientific computing course was recognized, hence the
-Scientific Computing track and courses developed by AMATH. There is
-also an R course ({\sc STAT 302}, 2 credits) offered irregularly.
-However, for reasons we will develop later, we consider that Python is
-the more appropriate computer language for our goals. Thus, we will
-both introduce Python and will use it to teach statitical methodology.
-As Python will be taught as a second programming language, and as it
-is similar enough to Java, we expect the students to be assimilate it
-quickly under our guidance.
+same courses that the approximately 500 CSE majors take). Thus, there
+is no room for data analysis applications in these courses.  There is
+also an programming in R course ({\sc STAT 302}, 2 credits) offered
+irregularly.
 
+However, for reasons we will expound later (\ref{sec:python}, we
+consider that Python is the more appropriate computer language for our
+goals. Thus, we will both introduce Python and will use it to teach
+statitical methodology.  As Python will be taught as a second
+programming language, and as it is similar enough to Java (taught in
+CSE 142), we expect the students to be assimilate it quickly under our
+guidance. In Spring 2013, a pilot course was taught (by H. Koepke,
+Statistics) that introduced Python and taught statistical modeling
+using the language, to an audience of around 40 CSE undergraduates
+(the vast majority of wich did {\em not} know Python). The students'
+feedback was very encouraging, and one of the reasons we are confident
+in our approach.
 
-
-\mmp{ to continue after the proposal more fleshed out}
-
-
-
-\mmp{put this somewhere?}
-{\em A fundamental concept at the core of the ACMS program is modeling - casting a real world problem in a way that makes it amenable to mathematical, statistical, or computational analysis. 
- Continuous modeling, while central to many applications, is not part of the CSE undergraduate curriculum, and statistical modeling is only a small component. }
-
+The need for a dedicated scientific computing course was long
+recognized, hence the Scientific Computing track and courses developed
+by AMATH ({\sc 481} (project based, in Matlab) {\sc 482, 483}). Our
+proposed courses are not replicating, but adding a new dimension to
+the existing AMATH courses. The latter focus on the ``signal
+processing'' aspects of data analysis (e.g filtering) ({\sc AMATH
+  482}) and on the ``hardware, software, and programming for
+large-scale scientific computing'' ({\sc AMATH 483}), while our
+courses focus on the statistical modeling and statistical decision
+making aspects.
  
 \comment{
 
@@ -181,11 +190,11 @@ How does UW support this plan:
 \label{sec:course-descr}
 
 \bits
-\item \statcl ``Probability and Statistics for Computer Science''
-``Computational Statistical Modeling and Machine Learning''
-\item \astrocl ``Data Intensive Astronomy'' 
+\item \statcl 
+``Computational Statistical Modeling and Machine Learning'' (4 credits)
+\item \astrocl ``Data Intensive Astronomy'' (3 credits)
 \eits
-These courses aims are explicitly to (1) to give students a hands on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
+These courses' aims are explicitly to (1) to give students a hands on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
 statistical modeling in general, and (2) to introduce them to the  machine learning methodology in particular, with specific attention to the issues of big data.
 
 The material covered will be partly overlapping with other courses
@@ -197,20 +206,38 @@ engineering data. In this sense, the overlap has not been avoided; so that
 the student can gain a new, computational perspective, on areas
 already studied from a more theoretical point of view. 
 
-\bit
-\item \statcl Draft Syllabus\\
-- a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)\\
-- a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)\\
-- models for statistical prediction, with focus on classification\\
-- in less detail: intro and computational aspects of other statistical topics like density estimation, clustering, testing, model selection and validation\\
-- intro to programming in Python, and to Python libraries supporting scientific computing\\
-- examples real applications from engineering and sciences (image analysis, information retrieval, etc.)
+{\bf Prerequisites} (for either course): an introductory programming
+course (not necessarily in Python), e.g. CSE 142 or equivalent
+programming experience; an introductory statistics course; mathematics
+multivariate calculus. The two courses can be taken in a sequence
+\statcl--\astrocl, or separately. These course can be accessible to
+other juniors and seniors with a strong quantitative background.
 
-Prerequisites: an introductory programming course (not necessarily in Python) or equivalent programming experience; an introductory statistics course; mathematics multivariate calculus
+\bit
+\item  \underline{\statcl~ Draft Syllabus}\\
+  - a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)\\
+  - a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)\\
+  - models for statistical prediction, with focus on classification\\
+  - review and computational aspects of other statistical topics like
+  density estimation, clustering, model selection and validation
+  (including regularization \and nonparametric modeling)\
+  - intro to programming in Python, and to Python libraries supporting scientific computing\\
+  - examples real applications from engineering and sciences (image
+  analysis, information retrieval, etc.)
 
 \item[]{\bf Learning goals for \statcl} Ability to perform computationally intense/authomated and efficient data analysis. Ability to combine existing tools and libraries with programming in a general purpose language (python). 
 Working knowledge of the most important/main machine learning tools and methods, as well as their probabilistic interpretation. Understanding of the practical implications of theoretical results like independence, overfitting, consistency of an estimator. 
 
+{\bf Textbooks} Unfortunately, there is no single textbook one can
+assign for this course. We will rely partly on \meila's previously
+developed course notes for {\it ``Probability and Statistics for
+  Computer Science''}, a computatonally minded introductory course,
+partly on new course notes to be developed by \meila specifically for
+this more advanced course, and partly on the textbook of \astrocl~
+which will provide among others the Python exercises. We are also
+considering \cite{} Daniela's machine learning book.
+
+\comment{
 \item{Motivation for \astrocl} \mmp{shorter,more to the point of grant}
 Astronomy and astrophysics are witnessing dramatic increases in data volume 
 as detectors, telescopes, and computers become ever more powerful. During the 
@@ -247,8 +274,9 @@ with scientific or engineering background, but it is likely that
 graduate students would benefit from it too. Familiarity with calculus
 and other basic mathematical techniques will be assumed, but no
 extensive prior knowledge in statistics will be required.
+}
 
-\item \astrocl~ Draft Syllabus\\
+\item \underline{\astrocl~ Draft Syllabus}\\
 Computational Challenges in data-intensive astronomy and astrophysics:
 -data types and data management systems
 -types of computational problems and strategies for speeding them up 
@@ -270,7 +298,7 @@ Basics of time series analysis
 
 Adoption and development of cross-disciplinary tools (e.g. numerical 
 algorithms, visualization methods, data-human interaction) in the context
-of big data, astronomical or otherwise \mmp{fill in exaamples, why these...}
+of big data, astronomical or otherwise (see \ref{sec:python}).
 \eit
 
 {\bf Learning goals for \astrocl}
@@ -288,29 +316,23 @@ of big data, astronomical or otherwise \mmp{fill in exaamples, why these...}
   Data''} (Princeton Series in Modern Observational Astronomy, in
 press) coauthored by the Co-PIs on this prooposal.
 
-
-\subsection{Format and student experience}
-
+{\bf Format and student experience} 
 The courses will consist of lectures, homework assignments, 1--2
-miniprojects, and a final exam. The TA will hold recitations; about
+miniprojects, and a final exam. The TA will hold quiz sections; about
 half of these will be in a (virtual) computer lab environment. 
 
-{\bf The Computer Lab recitations} will offer support for learning Python, as well as specific data analysis tools \mmp{examples: libraries, tools, from the book}   The student will practice working in groups, the technique of extreme programming, using a debugger.
+{\bf The Computer Lab recitations} will offer support for learning
+Python, as well as specific data analysis tools (see \ref{sec:python}).
+The student will practice programming in pairs (a.k.a extreme
+programming), using debuggers, profilers, writing modifiable code, etc.
 
-Another experience in the computer lab will be actual data analysis and visualization using the tools. 
+Another experience in the computer lab will be actual data analysis
+and visualization using the tools, the skills related to data
+visualisation, experimental data recording and reporting, etc.
 
-\mmp{the postdoc will train/supervise the TA's for both courses}
-
-{\bf Homework assignments} There will be 4-5 weekly homework assignments. They will contain concept problems, algorithms problems, programming assignments, and data analysis assignments.
-
-
-\mmp{{\bf TODO:} credits for each course\\
- put in some pictures (from 391..)\\
- sample student evaluations\\
- why python\\
-what support we have for python\\
-why astronomy good testbed
-}
+{\bf Homework assignments} There will be 4-5 homework
+assignments. They will contain concept problems, algorithms problems,
+programming assignments, and data analysis assignments.
 
 A note on the overlap between \statcl~ and \astrocl: Where the two
 courses have overlapping topics, \astrocl~ will consider the big data case
@@ -318,19 +340,9 @@ explicitly, while \statcl~ will be considering the connections between
 statistical theory and computation. \statcl~ will support more basic
 Python, while \astrocl~ will support Python libraries for big data.
 
-{\bf Lectures} We will blend in computer demos, class question and answer, and group discussion with the standard lecture format. 
-
-{\bf Textbooks} Unfortunately, there is no single textbook one can
-assign for this course. We will rely partly on \meila's previously
-developed course notes for {\it ``Probability and Statistics for
-  Computer Science''}, a computatonally minded introductory course,
-partly on new course notes to be developed by \meila specifically for
-this more advanced course, and partly on the textbook of \astrocl~
-which will provide among others the Python exercises. We are also considering \cite{} Daniela's machine learning book.
-
 
 \subsection{Python Packages} 
-
+\label{sec:python}
 
 \begin{figure*}[!t]
 \vskip -1.8in
@@ -395,8 +407,6 @@ course ``Probability and Statistics for Computer Science'' an
 introductory course aimed at computer science majors, complete with exercises and demos in Matlab, revised the Statistical Computing graduate course sequence, later developed the Statistical Learning graduate sequence and lead, with E. Fox, the effort to introduce the Machine Learning/Big Data PhD track in the Statistics department. 
 
 
-Some of the more advance
-
 \comment{
  under the same
 course number \statcl. This has been taught for 11 years at full
@@ -423,6 +433,8 @@ basis for the graduate student research. \mmp{shall i buy more nodes??}
 
 The \astroml~ book and web site will provide the starting point for the new courses' software and data infrastructure.
 
+
+
 \comment{
 (Recently, starting 2011, CSE created their own introduction to
 probability and statistics, {\sc CSE 312}. Thus it is clear that
@@ -436,19 +448,17 @@ course, having in mind that \bit
 I opted to replace the introductory material with more advanced topics, and for these I chose a set of basic machine learning topics. I also introduced more substantial data analysis assignments. These changes were implemented by Hoyt Kopke, who taught the class. The course web page is at {\tt }. The student feedback to this pilot experiment was very encouraging. \mmp{specifics: how many students, what depts, they liked being made to learn python, loved the projects too, level was demanding}
 }
 
-\mmp{move to university context or remove}
-{\bf Short term: how/where will these classes fit}
-\bits
+
+\comment{OTHER USEFUL INFO
 \item These courses fit very well with the original goal and mission of the  ACMS program. 
 \item Crosscultural diversity: these classes can also serve science and CSE majors as well as other quantitatively able students across the UW.
-\eits
 
 {\bf Links}\\
  \statcl Spring 2013 web site {\tt http://www.stat.washington.edu/courses/stat391/spring13/}\\
 \astroml~ textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}\\
 
 
-\comment{OTHER USEFUL INFO
+
 AMATH 481 Scientific Computing (5)
 Project-oriented computational approach to solving problems arising in the physical/engineering sciences, finance/economics, medical, social, and biological sciences. Problems requiring use of advanced MATLAB routines and toolboxes. Covers graphical techniques for data presentation and communication of scientific results. Prerequisite: AMATH 301; either AMATH 351 or MATH 307; either AMATH 352 or MATH 308. Offered: A. 
 
