--- a/introduction.tex
+++ b/introduction.tex
@@ -17,21 +17,19 @@ for faculty from other institutions wishing to emulate the proposed program.
   \bits
   \item two new courses
   \item new curriculum 
-  \item mentoring undergraduates
+  \item Undergraduate \cdse~ Research Seminar
   \eits
 \item {\bf Research and mentoring for research} \ref{sec:research} 
   \bits
-  \item \ldots
   \item facilitate entrance of Statistics students in computationally intensive data analysis research
   \item mentor Astronomy graduate students 
   \item mentoring undergraduates by PI's and graduate students
-  \item undergraduate research seminar
   \eits
 \item {\bf Dissemination and Outreach} \ref{sec:outreach}
   \bits
-  \item software and datasets infrastructure for teaching computational statistics and machine learning 
   \item workshop for UW faculty in the use of the infrastructure and our experience with it
   \item training workshop with outside participation 
+  \item software and datasets infrastructure for teaching computational statistics and machine learning 
   \eits
 \eits  
 
