--- a/education.tex
+++ b/education.tex
@@ -46,13 +46,13 @@ courses, the following:
     \item {\sc STAT 498} Special topics
 \eits
 The program web page recommends that ``[this track] is ideally suited as a {\em second major} for students with a primary focus in the [\ldots] sciences''.
-De facto, the track curricullum differs little, most notably by the
+De facto, the track curriculum differs little, most notably by the
 presence of the computer programming class {\sc CSE 142}, from the
 ``standard'' Statistics major.
 
 {\bf Enrollment} The ACMS major is competitive, with the number of
 majors capped at about 200.  During the recent academic years,
-graduation numbers have passed 100 student per year; the current
+graduation numbers have passed 100 students per year; the current
 enrollment is at 147\footnote{Complete breakdown of ACMS graduation
   numbers from 1998 on are in the Supplementary material.}.  Of these,
 the Statistics track accounts for 4 students currently enrolled (none
@@ -62,10 +62,10 @@ at an all times high, with \mmp{fill} of which XX women.
 
 \subsection{Transforming the Statistics  ACMS track}
 We will transform the ACMS Statistics track into a virtually new
-major, a ``computationally minded Statistics major''. In other words,
-we will not aim to produce scientists who also know statistics (which
+major, a ``computationally minded Statistics major focused on Big Data''. 
+In other words, we will not aim to produce scientists who also know statistics (which
 can be well served by Statistics minor and other tracks of ACMS) but
-full-fledged statisticians who can function autonomously in the
+full-fledged statisticians who can function autonomously in the modern
 cyberworld.
 
 There are several motivating factors:
@@ -83,7 +83,7 @@ There are several motivating factors:
   upon to design and validate the procedures used to take these
   decisions. Thus, the statician's importance in a much wider range of
   human activities, be they science or buisness. But the
-  statistician's responsability is comensurately growing, as she needs
+  statistician's responsibility is commensurately growing, as she needs
   to master the skills required by cyber-enabled science and data
   analysis.
 \item These skills include are not limited to using computers and
