--- a/proposal.tex
+++ b/proposal.tex
@@ -14,9 +14,10 @@
 %Uncomment next line for pdfTeX:
 %\pdftrue \pdfcompresslevel=9
 
-\title{Computer enabled statistics in the {ACMS} {Program} at the
+%\title{Computer enabled statistics in the {ACMS} {Program} at the
+\title{Statistical Explorations of Data in the {ACMS} {Program} at the
   {University} of {Washington}}
-\author{PI: Marina \meila, Co-PIs: Andrew Connolly, \u{Z}eljko Ivezic, Jacob Vanderplas}
+\author{PI: Marina \meila, Co-PIs: Andrew Connolly, \v{Z}eljko Ivezi\'{c}, Jacob Vanderplas}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \font\math = cmmi12
@@ -96,5 +97,49 @@
 \bibliographystyle{plain}
 \bibliography{proposal}
 \end{document} 
+
+
+
+
+Here are the current (Sunday, Oct 27) sections and subsections: 
+
+introduction.tex:\section{ INTRODUCTION}
+
+education.tex:\section{Education and Training}
+ education.tex:\subsection{\bf About the ACMS program}
+ education.tex:\subsection{Transforming the Statistics  ACMS track}
+
+education.tex:\section{University involvement}
+ education.tex:\subsection{Description of the courses}
+ education.tex:\subsection{Python Packages} 
+ education.tex:\subsection{What we are building on}
+
+dissemination.tex:\section{Dissemination and Outreach}
+ dissemination.tex:\subsection{Workshop} 
+
+research.tex:\section{Research}
+
+activities.tex:\section{Activities}
+ activities.tex:\subsection{Grad students involvement}
+ activities.tex:\subsection{PI Involvement}
+ activities.tex:\subsection{Undergraduate involvement}
+
+recruitment.tex: \section{Recruitment, Mentoring, and Retention}
+ recruitment.tex:\subsection{Recruiting Under-represented Groups}
+ recruitment.tex:\subsection{Mentoring, Networking, and Retaining Students}
+
+uw.tex:\subsection{The UW E-science program}
+uw.tex:\subsection{The University of Washington eScience Institute}
+uw.tex:\subsection{Graduate education: the ``Big-Data'' IGERT}
+
+planJake.tex:\subsection{Leveraging Current NSF Funding}
+
+organization.tex:\section{    {\bf        PROJECT ORGANIZATION         }}
+ organization.tex:\subsection{                      Key Project Aims                   }
+ organization.tex:\subsection{Responsibilities and Schedule}
+ organization.tex:\subsection{             Results from Prior NSF Support             }
+organization.tex:\section{Cemetery}
+
+
 
 
