"it seems introduction would be overwritten?? committing again"

--- a/organization.tex
+++ b/organization.tex
@@ -59,6 +59,13 @@ Emission from Quasars'' (AST-0807500) used time-domain data for the exploration 
 physics. This three-year project has produced four journal publications, a Ph.D. thesis, and has 
 engaged four undergraduates in data analysis and publications. 
 
+The project ``Intransitive Game-Thoretic'' classifiers ( )  analyzed the preference and ranked data in the context of intransitivity. This three year project produced: \mmp{fill} papers, a jointly taught Statistics/EE graduate course, 2 summer reading groups at UW and one at MIT, involved 5 statistics students, 1 CS student, 1 Applied Math student and 1 undergraduate, a code package available at {www.stat.washington.edu/mmp/intransitive}.
+
+The grant ``Doctoral Student Forum and Student Travel at the 2011 SIAM Data Mining Conference'' ( ) supported the travel of 14 out of town students to participate in the Doctoral Forum (9 out of these being statistics students), and an additional 7 students in the conference. The Forum activities: panel discussion, poster session, and best poster award were a succes. (In particular, several students obtained internships, organized SDM workshops in 2013, and improved their papers as a result of the Forum). 
+
+\meila~ is a recipient of the grant ``Statistical Modeling the Functional Activity in the Primary Motor Cortex''  from the {\em NSF ERC for Sensorymotor and Neural Engineering}, is a two year ongoing project. It has involved so far 2 statistics graduate students and one undergraduate. 
+
+
 
 \section{Cemetery}
 
