--- a/introduction.tex
+++ b/introduction.tex
@@ -12,20 +12,20 @@ at the University of Washington. We have secured broad institutional support and
 for faculty from other institutions wishing to emulate the proposed program. 
 
 \bits
-\item[]{\bf Education and Training} (Section \ref{sec:education} 
+\item[]{\bf Education and Training} (Section \ref{sec:education})
 \item Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
   \bits
   \item two new courses
   \item new curriculum 
   \item Undergraduate \cdse~ Research Seminar
   \eits
-\item {\bf Research and mentoring for research} \ref{sec:research} 
+\item {\bf Research and mentoring for research} (Section \ref{sec:research})
   \bits
   \item facilitate entrance of Statistics students in computationally intensive data analysis research
   \item mentor Astronomy graduate students 
   \item mentoring undergraduates by PI's and graduate students
   \eits
-\item {\bf Dissemination and Outreach} \ref{sec:outreach}
+\item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
   \bits
   \item workshop for UW faculty in the use of the infrastructure and our experience with it
   \item training workshop with outside participation 
