--- a/activities.tex
+++ b/activities.tex
@@ -2,6 +2,7 @@
 \label{sec:activities}
 
 \subsection{Grad students involvement}
+\label{sec:activities-grad}
 
 For the statistics graduate students funded by this grant, I envision 
 \bits
