--- a/education.tex
+++ b/education.tex
@@ -220,7 +220,7 @@ other juniors and seniors with a strong quantitative background.
   - models for statistical prediction, with focus on classification\\
   - review and computational aspects of other statistical topics like
   density estimation, clustering, model selection and validation
-  (including regularization \and nonparametric modeling)\
+  (including regularization and  nonparametric modeling)\\
   - intro to programming in Python, and to Python libraries supporting scientific computing\\
   - examples real applications from engineering and sciences (image
   analysis, information retrieval, etc.)
