--- a/proposal.tex
+++ b/proposal.tex
@@ -65,8 +65,10 @@
 
 \begin{document}
 \vskip -0.4in
+\centerline{\large \sc Project Description}
 
-\maketitle
+\input{title}   // this is the proposal title 
+%\maketitle
 
 \input{introduction}  % the same
    
