--- a/research.tex
+++ b/research.tex
@@ -1,4 +1,38 @@
 \section{Research}
 \label{sec:research}
 
-to be filled with awesome stuff
+The research plan under this grant will have as primary goal to
+introduce and prepare students to perform research in computationally
+intense statistical modeling and in the stastical analysis of large
+scientific data. The students targeted will be Statistics and ACMS
+Statistics track undergraduates, as well as Statistics and Astronomy
+graduate students. 
+
+We will specifically foster working in teams including graduate and
+undergraduate students. The students will be mentored by the four
+PI's. They will be working on real research projects, some of which
+are listed below. 
+\bits
+\item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
+\item {\em Non-parametric clustering and density estimation.} We will
+  focus here on methods that cluster by finding high-density regions
+  in very large data. This method is particularly suited to finding
+  non-spherical (or non-ellipsoidal) clusters in low-dimensional
+  data. It is robust to the presence of outliers or of background
+  distributions of points, and it is also robust to the presence of
+  clusters of very different sizes, being able to accomodate together
+  in one model both very large and very small clusters. The algorithms
+  are easy to understand and implement, making them ideal for a first
+  project in big scientific data analysis. Moreover, with an
+  appropriate distance function, these methods can be applied to very
+  high dimensional data as well. Our teams will explore finding
+  appropriate distance functions in recorded brain activity data,
+  social network data, and astronomical data.  
+\eits
+%
+Results of this work may be part of publishable research; others will
+be converted into problems and data sets for the teaching
+infrastructure that we will be building. We expect (see also Section
+\ref{sec:activities-grad}) that graduate students funded by this grant
+will transition after their ``apprenticeship'', to other big data
+research projects funded by other sources. 
