fixed the l6 error

--- a/proposal.tex
+++ b/proposal.tex
@@ -64,10 +64,16 @@
 
 
 \begin{document}
+\twocolumn[
+  \begin{@twocolumnfalse}
 \vskip -0.4in
 \centerline{\large \sc Project Description}
 
-\input{title}   // this is the proposal title 
+\input{title}   % this is the proposal title 
+\end{@twocolumnfalse}
+]
+
+
 %\maketitle
 
 \input{introduction}  % the same
