--- a/title.tex
+++ b/title.tex
@@ -1,7 +1,8 @@
 %\centerline{\large \sc document title} eg. BUdget justification, Summary,...
-\par
-\centerline{\large Computer Enabled Statistics and Data Exploration Program}
 
-\vspace{1em}
-\hline
+\centerline{\large \bf Computer Enabled Statistics and Data Exploration in the ACMS Program}
+
+
+\hrulefill
 \par
+\vspace{1em}
